--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "september_project",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "devDependencies": {},
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/Tribe-Sydney/September_Project#readme",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.20",
     "sharp": "^0.31.0",
     "validator": "^13.7.0"
   }
