--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_URL = mongodb+srv://user_001:password1234@e-commerce.zrasau7.mongodb.net/?retryWrites=true&w=majority
+NODE_ENV = development
