--- a/config.env
+++ b/config.env
@@ -1,3 +1,6 @@
 PORT = 3000
 DB_URL = mongodb+srv://user_001:password1234@e-commerce.zrasau7.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV = development
+JWT_COOKIE_EXPIRES_IN = 90
+JWT_EXPIRES_IN = 90d
+JWT_SECRET = this is tribe syndney, yup
